--- a/app/src/main/res/layout/frag_new.xml
+++ b/app/src/main/res/layout/frag_new.xml
@@ -33,5 +33,12 @@
         android:layout_height="wrap_content"
         android:text="Mood + Journal" />
 
+    <Button
+
+        android:layout_below="@id/btnMoodJournal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test" />
+
 
 </RelativeLayout>
